--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: Continues Integration
+name: ci
 on:
   push:
     branches:
-      - master
       - main
+      
 permissions:
   contents: write
 jobs:
@@ -27,6 +27,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-            
+
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
