--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Angelo De Castro
+site_url: https://github.com/AngeloDecastr/My-Portfolio
 
-site_url: https://mydomain.org/mysite
 theme:
   name: material
 
