--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Angelo De Castro
-site_url: https://github.com/AngeloDecastr/My-Portfolio
+site_url: https://angelodecastr.github.io/My-Portfolio/
 
 theme:
   name: material
