--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,12 +65,17 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.keys
 
+
 nav:
   - Home: index.md
   - Work Experience: Work Experience.md
   - Skills: Skills.md
   - Projects: Projects.md
-  - Certifications: Certifications.md
+
+  - Certifications:
+        - Fortinet: Certifications/Fortinet.md
+        - Cisco: Certifications/Introduction.md
+        - Computer Systems Servicing NC2: Certifications/NC2.md
   
 
 extra:
