--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,11 +70,11 @@ nav:
   - Home: index.md
   - Work Experience: Work Experience.md
   - Skills: Skills.md
-  
+
   - Projects: 
       - Guacamole: Projects/Guacamole.md
       - OpManager: Projects/OpMan.md
-      - Post Remotely: Projects/Remotely.md
+      - POS Remotely: Projects/Remotely.md
       - Uptime Kuma: Projects/Uptime.md
   
 
